--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@vercel/blob": "^0.23.3",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
