--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,7 @@
     ],
     "react/boolean-prop-naming": [
       "error",
-      { "rule": ",^(is|has|should|can|are|have)[A-Z]([A-Za-z0-9]?)+" }
+      { "rule": "^(is|has|should|can|are|have)[A-Z]([A-Za-z0-9]?)+" }
     ],
     "react/jsx-fragments": ["error", "syntax"],
     "react/jsx-curly-brace-presence": ["error"],
