--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,7 @@
         "vars": "all",
         "args": "after-used",
         "ignoreRestSiblings": true,
-        "argsIgnorePattern": ",^_"
+        "argsIgnorePattern": "^_"
       }
     ],
     "@typescript-eslint/no-misused-promises": ["error", { "checksVoidReturn": false }],
